--- a/style.css
+++ b/style.css
@@ -12,28 +12,37 @@
 }
 
 body {
-  background-color: #f2f2f2;
+  background-color: black;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
   display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+  width: 70%;
   min-height: 100vh;
   align-items: center;
 }
 
 .image {
-  width: 300px;
+  width: 400px;
   min-height: 100vh;
   background-image: url("image.jpg");
   background-color: #cccccc;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .image div {
   background-color: rgba(114, 114, 114, 0.542);
-  width: 300px;
+  width: 400px;
   margin-top: 200px;
   display: flex;
   align-items: center;
@@ -42,10 +51,14 @@ body {
   color: white;
 }
 
+.image p {
+  font-size: 10px;
+}
+
 p {
   margin: 5px 30px 15px;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 form {
@@ -53,7 +66,7 @@ form {
   padding: 10px 30px 30px;
   display: flex;
   flex-direction: column;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 form > div {
@@ -94,14 +107,14 @@ input:focus {
 button {
   background-color: rgb(159, 78, 46);
   color: white;
-  font-size: 10px;
+  font-size: 12px;
   letter-spacing: 0.5px;
   font-weight: 600;
   text-align: center;
   box-shadow: rgba(174, 174, 174, 0.597) 2px 2px 2px;
   border: none;
   border-radius: 5px;
-  padding: 7px 30px;
+  padding: 10px 30px;
   margin: 20px 30px 0px;
   cursor: pointer;
   transition-duration: 0.2s;
@@ -115,13 +128,19 @@ a {
   color: rgb(159, 78, 46);
   text-decoration: none;
   font-weight: 700;
+  transition-duration: 0.2s;
+}
+
+a:hover {
+  color: rgb(120, 60, 35);
 }
 
 .login {
-  font-size: 10px;
-  margin-top: 15px;
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 20px;
 }
 
-.pass {
+.pass:invalid {
   border: 1px solid rgba(214, 58, 58, 0.752);
 }
